--- a/quiz/templates/quiz/main.html
+++ b/quiz/templates/quiz/main.html
@@ -27,5 +27,8 @@
     </div>
 
 </body>
+<script>
+    quiz_api_url = "{% url 'quiz_question' %}";
+</script>
 <script src="{% static 'quiz/js/quiz.js' %}"></script>
 </html>
