refactored main view function into smaller subroutines, added a few tests

--- a/quiz/templates/quiz/main.html
+++ b/quiz/templates/quiz/main.html
@@ -11,6 +11,7 @@
 <body>
     <div class="quiz-wrapper">
         <h1>Card or Band?</h1>
+        <p>Does the name belong to a black Magic the Gathering card or a metal band?</p>
         <h2 class="question"></h2>
         <h2 class="initial-feedback"></h2>
         <div class="buttons">
