a few descriptive classes added to html elements in main.html

--- a/quiz/templates/quiz/main.html
+++ b/quiz/templates/quiz/main.html
@@ -24,9 +24,9 @@
         </div>
         <h3>streak: <span class="streak">0</span></h3>
         <div class="feedback">
-            <h3>Previous Question:</h3>
+            <h3 class="previous-question">Previous Question:</h3>
             <h3 class="feedback-name"></h3>
-            <h3>Your Guess: <span class="feedback-choice"></span> - <span class="feedback-correctness"></span></h3>
+            <h3 class="previous-guess">Your Guess: <span class="feedback-choice"></span> - <span class="feedback-correctness"></span></h3>
         </div>
     </div>
 
