--- a/quiz/templates/quiz/main.html
+++ b/quiz/templates/quiz/main.html
@@ -22,7 +22,7 @@
             <button class="band-button">Band</button>
             <button class="next" disabled>Next</button>
         </div>
-        <h3>streak: <span class="streak">0</span> high: <span class="high-streak">0</span></h3>
+        <h3 class="streak-wrapper">streak: <span class="streak">0</span> high: <span class="high-streak">0</span></h3>
         <div class="feedback">
             <h3 class="previous-question">Previous Question:</h3>
             <h3 class="feedback-name"></h3>
