--- a/quiz/static/quiz/css/quiz.css
+++ b/quiz/static/quiz/css/quiz.css
@@ -34,14 +34,26 @@ body.correct{
     font-size: 3rem;
     margin-bottom: 0.5em;
     display: block;
+    margin: 0.3em;
 }
 .question.hidden, .initial-feedback.hidden{
     display: none;
 }
 
 .feedback{
+    padding-top: 0.3em;
     font-size: 0.8rem;
     color: #939393;
+    background-color: #151515;
+    padding-bottom: 1em;
+    border-radius: 8px;
+}
+
+.streak-wrapper{
+    color: #939393;
+}
+.streak-wrapper span{
+    color: #eee;
 }
 
 h3{
@@ -50,6 +62,15 @@ h3{
 
 body.correct .feedback, body.incorrect .feedback{
     color: #ddd;
+}
+
+body.correct .streak-wrapper, body.incorrect .streak-wrapper{
+    color: #ddd;
+}
+
+.feedback h3{
+    margin-bottom: 0.25em;
+    margin-top: 0.25em;
 }
 
 .buttons{
